Fixed title color spill

--- a/html/_sass/styles.scss
+++ b/html/_sass/styles.scss
@@ -103,7 +103,7 @@ a.anchor {
 }
 
 #large-title h1 span {
-  padding: 10px 20px 0;
+  padding: .2em .3em 0;
   background-color: #875ED8;
 }
 
@@ -118,7 +118,7 @@ a.anchor {
 }
 
 #small-title h1 span {
-  padding: 10px 20px 0;
+  padding: .2em .3em 0;
   background-color: #875ED8;
 }
 
